# crew_ai_debate

./: README.md  pyproject.toml  run_crew
config/: agents.yaml
output/: decide.md  oppose.md  oppose_validation.md  propose.md  propose_validation.md
src/debate/: crew.py  main.py
src/debate/config/: agents.yaml  tasks.yaml
src/debate/tools/: sendgrid_tool.py  web_search_tool.py
