[project]
name = "debate"
version = "0.1.0"
description = "Debate crew project"
requires-python = ">=3.10"
dependencies = [
    "crewai",
    "ddgs>=9.14.3",
    "redis>=7.4.0",
    "sendgrid",
    "serpapi>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debate"]

[project.scripts]
run_crew = "debate.main:run"

